# FoundationKit.framework

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Makefile.am  README.md  configure.ac
BuildResources/Docker/jessie/: Dockerfile
BuildResources/Docker/precise/: Dockerfile
BuildResources/Docker/trusty/: Dockerfile
BuildResources/Docker/wheezy/: Dockerfile
BuildResources/Docker/xenial/: Dockerfile
BuildScripts/: .gitignore  docker-build  mkdist
Headers/: .gitignore  Array.hh  Declarations.h  DefaultAllocator.hh  Dictionary.hh  Factory.hh  FoundationKit.h  IVariant.h  Makefile.am  Object.hh  Process.hh  Registry.hh  String.hh  Thread.hh  URI.hh  UUID.hh
IDL/: IAllocator.idl  IArray.idl  IDictionary.idl  IFactory.idl  IObject.idl  IRegistry.idl  IString.idl  IVariant.idl  Interfaces.idl  Makefile.am
M4/: .gitignore  uriparser.m4
Resources/CI/: before_install.sh  mkdist
Resources/Docker/: build
Resources/Docker/centos7/: Dockerfile
Resources/Docker/stretch/: Dockerfile
Resources/Travis/: before_install.sh
Sources/: Array.cc  DefaultAllocator.cc  Dictionary.cc  Factory.cc  IFactory_uuids.c  IObject_uuids.c  IRegistry_uuids.c  Makefile.am  Object.cc  Process.cc  Registry.cc  String.cc  Thread.cc  URI.cc  UUID.cc  p_foundation.hh
Tests/: .gitignore  Makefile.am  gdb  lldb  t-c-object-call.c
